# fastapi-basic-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  requirements-precommit.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2025_11_20_1536-7c8586652ad3_initial.py
app/: __init__.py  main.py
app/blog/: __init__.py  models.py
app/common/: __init__.py  filtering.py  pagination.py  sorting.py
app/core/: __init__.py  config.py  database.py
app/files/: __init__.py  router.py
app/items/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/models/: __init__.py  base.py
app/pages/: __init__.py  router.py  schemas.py
app/tasks/: __init__.py  router.py
app/websocket/: __init__.py  router.py
assets/css/: styles.css  ws-test.css
docker/app/: Dockerfile  requirements-dev.txt  requirements.txt
docker/postcss/: Dockerfile  package.json
docker/postgres/: init.sql
static/: ws-test.html
templates/: contact.html  index.html
tests/: conftest.py  factories.py  test_files.py  test_items.py  test_main.py  test_pages.py  test_tasks.py  test_websocket.py
