[project]
name = "fastapi-basic-template"
version = "0.1.0"
description = "Comprehensive FastAPI project template with best practices"
readme = "README.md"
requires-python = ">=3.14"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv-precommit/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "S",      # flake8-bandit (security issues)
    "PT",     # flake8-pytest-style (pytest best practices)
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async (async/await correctness)
    "N",      # pep8-naming (naming conventions)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function arguments
    "S104",   # possible binding to all interfaces (0.0.0.0 in uvicorn)
    "S105",   # possible hardcoded password (false positives in config defaults)
    "S311",   # pseudo-random generators (non-cryptographic use is fine)
    "TC001",  # move app imports into TYPE_CHECKING (breaks FastAPI patterns)
    "TC002",  # move third-party imports into TYPE_CHECKING (breaks FastAPI patterns)
    "TC003",  # move stdlib imports into TYPE_CHECKING (breaks FastAPI patterns)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/models/__init__.py" = ["I"]  # Disable isort - import order matters for clarity
"tests/**/*" = ["ARG", "S101"]
"app/core/config.py" = ["N802"]  # Allow uppercase property names matching env vars

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
